# napi-rs

.github/workflows/: android-armv7.yml  zig.yaml
cli/: package.json
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs
crates/cli/src/commands/artifact/: mod.rs
crates/cli/src/commands/new/: mod.rs
crates/cli/src/commands/new/templates/: github_workflow_yml.tpl  package_json.tpl
crates/cli/src/utils/: target-config.json  target.rs
crates/napi/: Cargo.toml
crates/napi/src/bindgen_runtime/js_values/: buffer.rs
examples/napi/: index.d.ts
examples/napi/__tests__/__snapshots__/: typegen.spec.ts.md  typegen.spec.ts.snap
examples/napi/src/: class.rs
